--- a/deployment/pipeline.properties
+++ b/deployment/pipeline.properties
@@ -1,9 +1,9 @@
-credentialRegistry=credential_imgreg_u00
+credentialRegistry=credential_imgreg_u04
 registry=docker.io
-organization=hiondal
+organization=sumeen99
 repository=hellonode
 tag=0.0.1
-namespace=u00
+namespace=u04
 manifest=deployment/deploy.yaml
 selector_key=app
 selector_val=hellonode
