--- a/deployment/pipeline.properties
+++ b/deployment/pipeline.properties
@@ -1,7 +1,7 @@
 credentialRegistry=credential_imgreg_u04
 registry=docker.io
 organization=sumeen99
-repository=hellonode
+repository=cicd-nodejs-sample
 tag=0.0.1
 namespace=u04
 manifest=deployment/deploy.yaml
